--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="The shoppies!"
-      content="Movie nomination web app built on React"
+      content="Movie nomination web app built on React."
     />
     <title>The Shoppies!</title>
     <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
